# theremo

./: Cargo.toml  README.md  config.yaml  theremo.yaml
data/: notes.csv
src/: config.rs  main.rs  stdin.rs  wave.rs
