[package]
name = "theremo"
version = "0.1.0"
authors = ["Renan Ferreira <renanferreira.js@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.10.0"
anyhow = "1.0.19"
libmath = "0.2.1"
termios = "0.3.1"
futures = "0.3.1"